# product-detection

./: README.md  dataloader.py  main.py  model.py  pyproject.toml  trainer.py
