[tool.poetry]
name = "product-detection"
version = "0.1.0"
description = ""
authors = ["JJ Wong <jjwong0915@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "~2.1.1"
numpy = "^1.19.0"
tensorflow-estimator = "~2.1.0"
pillow = "^7.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
